--- a/notebooks/summarize-contain.ipynb
+++ b/notebooks/summarize-contain.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "85685647-7bbc-409a-9164-6159bc4382e5",
    "metadata": {},
    "outputs": [
@@ -21,14 +21,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Snakefile              metags.mf.csv  summarize-advantage.ipynb  summary.csv\n",
-      "\u001b[0m\u001b[01;32mmake-top-picklist.py\u001b[0m*  \u001b[01;34mpicklists\u001b[0m/     \u001b[01;32msummarize-results.py\u001b[0m*\n",
-      "\u001b[01;34mmanifests\u001b[0m/             \u001b[01;34mresults\u001b[0m/       summarize-results.py~\n"
+      "\u001b[0m\u001b[01;34mmanifests\u001b[0m/  metags.mf.csv  \u001b[01;34mpicklists\u001b[0m/  \u001b[01;34mresults\u001b[0m/\n"
      ]
     }
    ],
    "source": [
-    "ls"
+    "ls ../outputs.test/contain"
    ]
   },
   {
