--- a/notebooks/explainability.ipynb
+++ b/notebooks/explainability.ipynb
@@ -10,25 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LICENSE\n",
-      "MAGs.all_subGTDB-genomes.k31.x.bin-sketches.csv\n",
-      "MAGs.all_subGTDB-genomes.k31.x.bin-sketches.with-lineages.csv\n",
-      "\u001b[0m\u001b[01;36mMAGs.all_subGTDB-genomes.k31.zip\u001b[0m@\n",
-      "README.md\n",
-      "TODO\n",
-      "\u001b[01;34mbin-coverage\u001b[0m/\n",
-      "config.yaml\n",
-      "\u001b[01;34mcontain\u001b[0m/\n",
-      "\u001b[01;34mdecontam\u001b[0m/\n",
-      "\u001b[01;34mderep\u001b[0m/\n",
-      "\u001b[01;34mexplain\u001b[0m/\n",
-      "explainability.ipynb\n",
-      "\u001b[01;34mmin-set-cov\u001b[0m/\n",
-      "\u001b[01;34mnotebooks\u001b[0m/\n",
-      "\u001b[01;34mrename\u001b[0m/\n",
-      "requirements.txt\n",
-      "run-all.sh\n",
-      "\u001b[01;34msketch-raw\u001b[0m/\n"
+      "advantage.png         sketches.f_known.png      summarize-contain.ipynb\n",
+      "explainability.ipynb  sketches.f_unknown.png\n",
+      "min-set-cov.ipynb     sketches.min-set-cov.png\n"
      ]
     }
    ],
@@ -38,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "5176e0a8-d7e3-4083-9235-ca90adc73741",
    "metadata": {},
    "outputs": [
@@ -46,47 +30,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERR3211879.bins-only.gather.csv   SRR12795789.bins-only.gather.csv\n",
-      "ERR3211879.gather.csv             SRR12795789.gather.csv\n",
-      "ERR3211879.gtdb-only.gather.csv   SRR12795789.gtdb-only.gather.csv\n",
-      "ERR8314788.bins-only.gather.csv   SRR15057925.gather.csv\n",
-      "ERR8314788.gather.csv             SRR15057930.gather.csv\n",
-      "ERR8314788.gtdb-only.gather.csv   SRR5241537.gather.csv\n",
-      "SRR11125249.gather.csv            SRR8960141.bins-only.gather.csv\n",
-      "SRR11125447.bins-only.gather.csv  SRR8960141.gather.csv\n",
-      "SRR11125447.gather.csv            SRR8960141.gtdb-only.gather.csv\n",
-      "SRR11125447.gtdb-only.gather.csv  SRR8960250.bins-only.gather.csv\n",
-      "SRR11125672.bins-only.gather.csv  SRR8960250.gather.csv\n",
-      "SRR11125672.gather.csv            SRR8960250.gtdb-only.gather.csv\n",
-      "SRR11125672.gtdb-only.gather.csv  SRR8960946.bins-only.gather.csv\n",
-      "SRR11126199.bins-only.gather.csv  SRR8960946.gather.csv\n",
-      "SRR11126199.gather.csv            SRR8960946.gtdb-only.gather.csv\n",
-      "SRR11126199.gtdb-only.gather.csv  Snakefile\n",
-      "SRR11126399.bins-only.gather.csv  Snakefile~\n",
-      "SRR11126399.gather.csv            \u001b[0m\u001b[01;36mmetags\u001b[0m@\n",
-      "SRR11126399.gtdb-only.gather.csv  random-list.txt\n",
-      "SRR12795785.gather.csv\n"
+      "ERR3211879.bins-only.gather.csv   SRR11126399.bins-only.gather.csv\n",
+      "ERR3211879.gtdb+bins.gather.csv   SRR11126399.gtdb+bins.gather.csv\n",
+      "ERR3211879.gtdb+bins.gather.out   SRR11126399.gtdb+bins.gather.out\n",
+      "ERR3211879.gtdb-only.gather.csv   SRR11126399.gtdb-only.gather.csv\n",
+      "ERR3211879.gtdb-only.gather.out   SRR12795789.bins-only.gather.csv\n",
+      "ERR8314788.bins-only.gather.csv   SRR12795789.gtdb+bins.gather.csv\n",
+      "ERR8314788.gtdb+bins.gather.csv   SRR12795789.gtdb+bins.gather.out\n",
+      "ERR8314788.gtdb+bins.gather.out   SRR12795789.gtdb-only.gather.csv\n",
+      "ERR8314788.gtdb-only.gather.csv   SRR8960141.bins-only.gather.csv\n",
+      "SRR11125447.bins-only.gather.csv  SRR8960141.gtdb+bins.gather.csv\n",
+      "SRR11125447.gtdb+bins.gather.csv  SRR8960141.gtdb+bins.gather.out\n",
+      "SRR11125447.gtdb+bins.gather.out  SRR8960141.gtdb-only.gather.csv\n",
+      "SRR11125447.gtdb-only.gather.csv  SRR8960141.gtdb-only.gather.out\n",
+      "SRR11125672.bins-only.gather.csv  SRR8960250.bins-only.gather.csv\n",
+      "SRR11125672.gtdb+bins.gather.csv  SRR8960250.gtdb+bins.gather.csv\n",
+      "SRR11125672.gtdb+bins.gather.out  SRR8960250.gtdb+bins.gather.out\n",
+      "SRR11125672.gtdb-only.gather.csv  SRR8960250.gtdb-only.gather.csv\n",
+      "SRR11125672.gtdb-only.gather.out  SRR8960946.bins-only.gather.csv\n",
+      "SRR11126199.bins-only.gather.csv  SRR8960946.gtdb+bins.gather.csv\n",
+      "SRR11126199.gtdb+bins.gather.csv  SRR8960946.gtdb+bins.gather.out\n",
+      "SRR11126199.gtdb+bins.gather.out  SRR8960946.gtdb-only.gather.csv\n",
+      "SRR11126199.gtdb-only.gather.csv  SRR8960946.gtdb-only.gather.out\n"
      ]
     }
    ],
    "source": [
-    "ls explain/\n",
-    "ls explain/*.gtdb+bins.gather.csv"
+    "ls ../outputs.test/explain/\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "42a31f69-c017-400a-a3a6-9410b0d82d19",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "85.02905701440979"
+       "75.57062096202331"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,6 +85,7 @@
     "    #print(dirpath + f'/*.{db}gather.csv')\n",
     "    #print(gather_csvs)\n",
     "    total = 0\n",
+    "    assert len(gather_csvs), (dirpath, gather_csvs)\n",
     "    for csv in gather_csvs:\n",
     "        df = pd.read_csv(csv)\n",
     "        row = next(iter(df.tail(1).itertuples(index=False)))\n",
@@ -108,18 +94,18 @@
     "\n",
     "    return total*100\n",
     "\n",
-    "load_all('explain', db='gtdb+bins.')"
+    "load_all('../outputs.test/explain', db='gtdb+bins.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "e8ababb5-59fc-4ad9-8554-17cabc358fab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pairs = [('explain/', 'basic'),\n",
-    "        ]\n"
+    "pairs = [('../outputs.test/explain/', 'basic'),\n",
+    "        ]"
    ]
   },
   {
@@ -132,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "1eae8656-3ea4-4306-ae15-5d84f21f581c",
    "metadata": {},
    "outputs": [
@@ -140,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "85.03% basic\n"
+      "75.57% basic\n"
      ]
     }
    ],
@@ -166,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "b197da2f-51d8-43e3-a4fe-adb18440b98a",
    "metadata": {},
    "outputs": [
@@ -174,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69.75% basic\n"
+      "1.62% basic\n"
      ]
     }
    ],
@@ -215,14 +201,6 @@
     "for p, name in results:\n",
     "   print(f\"{p:.2f}% {name}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88ea0696-76a8-4ce0-be37-57c6b976c33d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
