--- a/notebooks/explainability.ipynb
+++ b/notebooks/explainability.ipynb
@@ -10,9 +10,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "advantage.png         sketches.f_known.png      summarize-contain.ipynb\n",
-      "explainability.ipynb  sketches.f_unknown.png\n",
-      "min-set-cov.ipynb     sketches.min-set-cov.png\n"
+      "advantage.png                     sketches.f_known.png\n",
+      "explainability.ipynb              sketches.f_unknown.png\n",
+      "min-set-cov.ipynb                 sketches.min-set-cov.png\n",
+      "rarefaction-explainability.ipynb  summarize-contain.ipynb\n",
+      "rarefaction.ipynb                 view-explain-summary.ipynb\n"
      ]
     }
    ],
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5176e0a8-d7e3-4083-9235-ca90adc73741",
    "metadata": {},
    "outputs": [
@@ -30,33 +32,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERR3211879.bins-only.gather.csv   SRR11126399.bins-only.gather.csv\n",
-      "ERR3211879.gtdb+bins.gather.csv   SRR11126399.gtdb+bins.gather.csv\n",
-      "ERR3211879.gtdb+bins.gather.out   SRR11126399.gtdb+bins.gather.out\n",
-      "ERR3211879.gtdb-only.gather.csv   SRR11126399.gtdb-only.gather.csv\n",
-      "ERR3211879.gtdb-only.gather.out   SRR12795789.bins-only.gather.csv\n",
-      "ERR8314788.bins-only.gather.csv   SRR12795789.gtdb+bins.gather.csv\n",
-      "ERR8314788.gtdb+bins.gather.csv   SRR12795789.gtdb+bins.gather.out\n",
-      "ERR8314788.gtdb+bins.gather.out   SRR12795789.gtdb-only.gather.csv\n",
-      "ERR8314788.gtdb-only.gather.csv   SRR8960141.bins-only.gather.csv\n",
-      "SRR11125447.bins-only.gather.csv  SRR8960141.gtdb+bins.gather.csv\n",
-      "SRR11125447.gtdb+bins.gather.csv  SRR8960141.gtdb+bins.gather.out\n",
-      "SRR11125447.gtdb+bins.gather.out  SRR8960141.gtdb-only.gather.csv\n",
-      "SRR11125447.gtdb-only.gather.csv  SRR8960141.gtdb-only.gather.out\n",
-      "SRR11125672.bins-only.gather.csv  SRR8960250.bins-only.gather.csv\n",
-      "SRR11125672.gtdb+bins.gather.csv  SRR8960250.gtdb+bins.gather.csv\n",
-      "SRR11125672.gtdb+bins.gather.out  SRR8960250.gtdb+bins.gather.out\n",
-      "SRR11125672.gtdb-only.gather.csv  SRR8960250.gtdb-only.gather.csv\n",
-      "SRR11125672.gtdb-only.gather.out  SRR8960946.bins-only.gather.csv\n",
-      "SRR11126199.bins-only.gather.csv  SRR8960946.gtdb+bins.gather.csv\n",
-      "SRR11126199.gtdb+bins.gather.csv  SRR8960946.gtdb+bins.gather.out\n",
-      "SRR11126199.gtdb+bins.gather.out  SRR8960946.gtdb-only.gather.csv\n",
-      "SRR11126199.gtdb-only.gather.csv  SRR8960946.gtdb-only.gather.out\n"
+      "ls: cannot access '../outputs.ath/explain/': No such file or directory\n"
      ]
     }
    ],
    "source": [
-    "ls ../outputs.test/explain/\n"
+    "ls ../outputs.ath/pangenome-expbig/\n"
    ]
   },
   {
@@ -68,7 +49,7 @@
     {
      "data": {
       "text/plain": [
-       "75.57062096202331"
+       "0.7474896161890195"
       ]
      },
      "execution_count": 7,
@@ -81,12 +62,12 @@
     "import pandas as pd\n",
     "\n",
     "def load_all(dirpath, *, db):\n",
-    "    gather_csvs = glob.glob(dirpath + f'/*.{db}gather.csv')\n",
+    "    gather_csvs = glob.glob(dirpath + f'/*.{db}.species.gather.csv')\n",
     "    #print(dirpath + f'/*.{db}gather.csv')\n",
     "    #print(gather_csvs)\n",
     "    total = 0\n",
     "    assert len(gather_csvs), (dirpath, gather_csvs)\n",
-    "    for csv in gather_csvs:\n",
+    "    for csv in gather_csvs[:20]:\n",
     "        df = pd.read_csv(csv)\n",
     "        row = next(iter(df.tail(1).itertuples(index=False)))\n",
     "        sum_unique_weighted = row.sum_weighted_found / row.total_weighted_hashes\n",
@@ -94,7 +75,7 @@
     "\n",
     "    return total*100\n",
     "\n",
-    "load_all('../outputs.test/explain', db='gtdb+bins.')"
+    "load_all('../outputs.ath/pangenome-expbig', db='gtdb+bins')"
    ]
   },
   {
@@ -104,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pairs = [('../outputs.test/explain/', 'basic'),\n",
+    "pairs = [('../outputs.ath/pangenome-expbig/', 'basic'),\n",
     "        ]"
    ]
   },
@@ -126,14 +107,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "75.57% basic\n"
+      "0.75% basic\n"
      ]
     }
    ],
    "source": [
     "results = []\n",
     "for dirname, name in pairs:\n",
-    "    p = load_all(dirname, db='gtdb+bins.')\n",
+    "    p = load_all(dirname, db='gtdb+bins')\n",
     "    results.append((p, name))\n",
     "\n",
     "results.sort()\n",
